--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -18,11 +18,15 @@
       // }
     }
 
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    align-content: center;
 }
 
 form{
  position: relative;
- margin: 35px auto 0 auto;
+ margin: 0 auto;
 
 }
 form button{
@@ -36,18 +40,31 @@ form button{
 form input{
   padding: 10px;
   border: none;
-  border-bottom: 3px solid $black;
+  border-bottom: 1px solid $white;
   width: calc(100% - 20px);
   max-width: 600px;
   margin: 0;
+  color: $white;
 
   text-align: center;
   font-family: $base-font;
   font-size: 20px;
-  border-radius: 0px;
   -webkit-style: none !important;
   transition: all .1s ease-in-out;
 
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #ccc;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: #ccc;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: #ccc;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: #ccc;
 }
 
 #items{
