--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,557 +1,1 @@
-/* line 1, ../scss/_reset.scss */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-  font-family: sans-serif;
-}
-
-/* line 10, ../scss/_reset.scss */
-nav ul {
-  list-style: none;
-}
-
-/* HTML5 display-role reset for older browsers */
-/* line 15, ../scss/_reset.scss */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-/* line 19, ../scss/_reset.scss */
-a {
-  text-decoration: none;
-}
-
-/* line 21, ../scss/_display.scss */
-body {
-  text-align: center;
-}
-
-/* line 25, ../scss/_display.scss */
-h1 {
-  font-family: "filson-soft", sans-serif;
-  font-size: 50px;
-  width: 100%;
-  font-weight: 700;
-  top: 25px;
-}
-/* line 31, ../scss/_display.scss */
-h1 a {
-  font-family: "filson-soft", sans-serif;
-}
-
-/* line 36, ../scss/_display.scss */
-p {
-  font-family: "filson-soft", sans-serif;
-}
-
-/* line 41, ../scss/_display.scss */
-a.clear {
-  font-family: "filson-soft", sans-serif;
-  display: inline-block;
-  position: fixed;
-  right: 10px;
-  bottom: 10px;
-  padding: 10px;
-  color: #333;
-  background-color: #ddd;
-  border-radius: 5px;
-  transition: all .1s ease-in-out;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-size: 10px;
-}
-/* line 55, ../scss/_display.scss */
-a.clear:active {
-  transform: scale(0.9);
-}
-
-/* line 61, ../scss/_display.scss */
-::selection {
-  background: #6868da;
-  color: #fff;
-}
-
-/* line 65, ../scss/_display.scss */
-::-moz-selection {
-  background: #6868da;
-  color: #fff;
-}
-
-/* line 1, ../scss/_alertify.scss */
-.alertify,
-.alertify-show,
-.alertify-log {
-  -webkit-transition: all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  -moz-transition: all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  -ms-transition: all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  -o-transition: all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  transition: all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-  /* easeOutBack */
-}
-
-/* line 10, ../scss/_alertify.scss */
-.alertify-hide {
-  -webkit-transition: all 250ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
-  -moz-transition: all 250ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
-  -ms-transition: all 250ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
-  -o-transition: all 250ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
-  transition: all 250ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
-  /* easeInBack */
-}
-
-/* line 17, ../scss/_alertify.scss */
-.alertify-log-hide {
-  -webkit-transition: all 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
-  -moz-transition: all 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
-  -ms-transition: all 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
-  -o-transition: all 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
-  transition: all 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
-  /* easeInBack */
-}
-
-/* line 24, ../scss/_alertify.scss */
-.alertify-cover {
-  position: fixed;
-  z-index: 99999;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: #000;
-  filter: alpha(opacity=0);
-  opacity: 0;
-}
-
-/* line 31, ../scss/_alertify.scss */
-.alertify-cover-hidden {
-  display: none;
-}
-
-/* line 34, ../scss/_alertify.scss */
-.alertify {
-  position: fixed;
-  z-index: 99999;
-  top: 50px;
-  left: 50%;
-  width: 550px;
-  margin-left: -275px;
-  opacity: 1;
-}
-
-/* line 41, ../scss/_alertify.scss */
-.alertify-hidden {
-  -webkit-transform: translate(0, -150px);
-  -moz-transform: translate(0, -150px);
-  -ms-transform: translate(0, -150px);
-  -o-transform: translate(0, -150px);
-  transform: translate(0, -150px);
-  opacity: 0;
-  display: none;
-}
-
-/* overwrite display: none; for everything except IE6-8 */
-/* line 51, ../scss/_alertify.scss */
-:root * > .alertify-hidden {
-  display: block;
-  visibility: hidden;
-}
-
-/* line 55, ../scss/_alertify.scss */
-.alertify-logs {
-  position: fixed;
-  z-index: 5000;
-  bottom: 10px;
-  right: 10px;
-  width: 300px;
-}
-
-/* line 62, ../scss/_alertify.scss */
-.alertify-logs-hidden {
-  display: none;
-}
-
-/* line 65, ../scss/_alertify.scss */
-.alertify-log {
-  display: block;
-  margin-top: 10px;
-  position: relative;
-  right: -300px;
-  opacity: 0;
-}
-
-/* line 72, ../scss/_alertify.scss */
-.alertify-log-show {
-  right: 0;
-  opacity: 1;
-}
-
-/* line 76, ../scss/_alertify.scss */
-.alertify-log-hide {
-  -webkit-transform: translate(300px, 0);
-  -moz-transform: translate(300px, 0);
-  -ms-transform: translate(300px, 0);
-  -o-transform: translate(300px, 0);
-  transform: translate(300px, 0);
-  opacity: 0;
-}
-
-/* line 84, ../scss/_alertify.scss */
-.alertify-dialog {
-  padding: 25px;
-}
-
-/* line 87, ../scss/_alertify.scss */
-.alertify-resetFocus {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-}
-
-/* line 97, ../scss/_alertify.scss */
-.alertify-inner {
-  text-align: center;
-}
-
-/* line 100, ../scss/_alertify.scss */
-.alertify-text {
-  margin-bottom: 15px;
-  width: 100%;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  font-size: 100%;
-}
-
-/* line 110, ../scss/_alertify.scss */
-.alertify-button,
-.alertify-button:hover,
-.alertify-button:active,
-.alertify-button:visited {
-  background: none;
-  text-decoration: none;
-  border: none;
-  /* line-height and font-size for input button */
-  line-height: 1.5;
-  font-size: 100%;
-  display: inline-block;
-  cursor: pointer;
-  margin-left: 5px;
-}
-
-@media only screen and (max-width: 680px) {
-  /* line 126, ../scss/_alertify.scss */
-  .alertify,
-  .alertify-logs {
-    width: 90%;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-  }
-
-  /* line 133, ../scss/_alertify.scss */
-  .alertify {
-    left: 5%;
-    margin: 0;
-  }
-}
-/**
- * Default Look and Feel
- */
-/* line 141, ../scss/_alertify.scss */
-.alertify,
-.alertify-log {
-  font-family: "filson-soft", sans-serif;
-}
-
-/* line 145, ../scss/_alertify.scss */
-.alertify {
-  background: #000;
-  color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
-  -webkit-background-clip: padding;
-  /* Safari 4? Chrome 6? */
-  -moz-background-clip: padding;
-  /* Firefox 3.6 */
-  background-clip: padding-box;
-  /* Firefox 4, Safari 5, Opera 10, IE 9 */
-}
-
-/* line 154, ../scss/_alertify.scss */
-.alertify-text {
-  padding: 10px;
-  border-radius: 4px;
-}
-
-/* line 159, ../scss/_alertify.scss */
-.alertify-message {
-  margin-bottom: 15px;
-}
-
-/* line 162, ../scss/_alertify.scss */
-.alertify-button {
-  border-radius: 4px;
-  font-weight: bold;
-  padding: 6px 15px;
-  text-decoration: none;
-  color: #fff;
-  background: #6868da;
-}
-
-/* line 170, ../scss/_alertify.scss */
-.alertify-button:hover,
-.alertify-button:focus {
-  color: #fff;
-  background: #6868da;
-  outline: none;
-  transform: scale(1.1);
-}
-
-/* line 180, ../scss/_alertify.scss */
-.alertify-button:active {
-  position: relative;
-}
-
-/* line 192, ../scss/_alertify.scss */
-.alertify-log {
-  background: #1F1F1F;
-  background: rgba(0, 0, 0, 0.9);
-  padding: 15px;
-  border-radius: 4px;
-  color: #FFF;
-  text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.5);
-}
-
-/* line 200, ../scss/_alertify.scss */
-.alertify-log-error {
-  background: #FE1A00;
-  background: rgba(254, 26, 0, 0.9);
-}
-
-/* line 204, ../scss/_alertify.scss */
-.alertify-log-success {
-  background: #5CB811;
-  background: rgba(92, 184, 17, 0.9);
-}
-
-/* line 3, ../scss/_main.scss */
-#app h1 {
-  position: fixed;
-  padding: 5px;
-  top: 0;
-  font-size: 16px;
-  text-align: left;
-  z-index: 1000;
-  background: #fff;
-}
-
-/* line 23, ../scss/_main.scss */
-form {
-  position: relative;
-  margin: 35px auto 0 auto;
-}
-
-/* line 28, ../scss/_main.scss */
-form button {
-  display: block;
-  visibility: hidden;
-  width: 0px;
-  padding: 0;
-  margin: 0;
-}
-
-/* line 36, ../scss/_main.scss */
-form input {
-  padding: 10px;
-  border: none;
-  border-bottom: 3px solid #000;
-  width: calc(100% - 20px);
-  max-width: 600px;
-  margin: 0;
-  text-align: center;
-  font-family: "filson-soft", sans-serif;
-  font-size: 20px;
-  border-radius: 0px;
-  -webkit-style: none !important;
-  transition: all .1s ease-in-out;
-}
-
-/* line 53, ../scss/_main.scss */
-#items {
-  margin: 0 auto;
-  padding: 0;
-  list-style: none;
-  display: flex;
-  flex-flow: column nowrap;
-  max-width: 620px;
-}
-/* line 61, ../scss/_main.scss */
-#items.purple li a {
-  background: #6868da;
-  color: #fff;
-}
-/* line 66, ../scss/_main.scss */
-#items li {
-  margin-bottom: 1px;
-}
-/* line 69, ../scss/_main.scss */
-#items li span.handle {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
-  border-right: 1px solid #fff;
-  padding: 0 11px;
-  margin-top: -3px;
-  top: 0;
-  bottom: 0;
-  left: 0;
-}
-/* line 82, ../scss/_main.scss */
-#items li.done {
-  order: 100;
-}
-/* line 86, ../scss/_main.scss */
-#items li.done span {
-  display: none;
-}
-/* line 90, ../scss/_main.scss */
-#items li.done a {
-  color: #a9a9a9;
-  background: #efefef !important;
-  text-decoration: line-through;
-  padding-left: 10px;
-}
-/* line 99, ../scss/_main.scss */
-#items li a {
-  font-family: "filson-soft", sans-serif;
-  font-weight: 700;
-  display: block;
-  word-wrap: break-word;
-  padding: 10px 10px 10px 60px;
-  text-decoration: none;
-  color: #fff;
-  transition: all .1s ease-in-out;
-  text-align: left;
-  position: relative;
-  -webkit-hyphens: auto;
-  -moz-hyphens: auto;
-  hyphens: auto;
-  width: auto;
-}
-/* line 122, ../scss/_main.scss */
-#items li a:active {
-  transform: scale(1.025);
-}
-/* line 130, ../scss/_main.scss */
-#items li.ui-sortable-helper a {
-  cursor: move;
-  cursor: -moz-grab;
-  cursor: -webkit-grab;
-}
-/* line 136, ../scss/_main.scss */
-#items li.ui-state-highlight {
-  height: 50px;
-  opacity: .2;
-  max-width: 620px;
-  margin-left: auto;
-  margin-right: auto;
-}
-/* line 144, ../scss/_main.scss */
-#items li {
-  font-size: 20px;
-}
-
-/* line 1, ../scss/_color-nav.scss */
-nav.colors {
-  position: fixed;
-  top: 5px;
-  right: 5px;
-  margin: 0 auto;
-  z-index: 2000;
-}
-/* line 8, ../scss/_color-nav.scss */
-nav.colors ul li a {
-  line-height: 20px;
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  font-size: 50px;
-}
-/* line 15, ../scss/_color-nav.scss */
-nav.colors ul li a.active, nav.colors ul li a:hover {
-  transform: scale(1.5);
-}
-/* line 19, ../scss/_color-nav.scss */
-nav.colors ul li a.black {
-  color: #000;
-}
-/* line 23, ../scss/_color-nav.scss */
-nav.colors ul li a.red {
-  color: #F14E5C;
-}
-/* line 27, ../scss/_color-nav.scss */
-nav.colors ul li a.purple {
-  color: #6868da;
-}
-
-/* line 3, ../scss/_colors.scss */
-#app h1, #app input, #app a {
-  transition: all .1s ease-in-out;
-}
-/* line 7, ../scss/_colors.scss */
-#app h1 a {
-  text-decoration: none;
-}
-/* line 13, ../scss/_colors.scss */
-#app.black form input {
-  border-color: #000;
-  outline: #000;
-  color: #000;
-}
-/* line 19, ../scss/_colors.scss */
-#app.black #items li a {
-  background: #000;
-}
-/* line 59, ../scss/_colors.scss */
-#app.black li.ui-state-highlight {
-  opacity: .1;
-  background: #000;
-}
-/* line 66, ../scss/_colors.scss */
-#app.purple form input {
-  border-color: #6868da;
-  outline: #6868da;
-  color: #6868da;
-}
-/* line 72, ../scss/_colors.scss */
-#app.purple #items li a {
-  background: #6868da;
-}
-/* line 76, ../scss/_colors.scss */
-#app.purple li.ui-state-highlight {
-  background: #6868da;
-}
-/* line 82, ../scss/_colors.scss */
-#app.red form input {
-  border-color: #F14E5C;
-  outline: #F14E5C;
-  color: #F14E5C;
-}
-/* line 88, ../scss/_colors.scss */
-#app.red #items li a {
-  background: #F14E5C;
-}
-/* line 92, ../scss/_colors.scss */
-#app.red li.ui-state-highlight {
-  background: #F14E5C;
-}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;font-family:sans-serif}nav ul{list-style:none}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}a{text-decoration:none}body{text-align:center}h1{font-family:"filson-soft",sans-serif;font-size:50px;width:100%;font-weight:700;top:25px}h1 a{font-family:"filson-soft",sans-serif}p{font-family:"filson-soft",sans-serif}a.clear{font-family:"filson-soft",sans-serif;display:inline-block;position:fixed;right:10px;bottom:10px;padding:10px;color:#333;background-color:#ddd;border-radius:5px;transition:all .1s ease-in-out;text-transform:uppercase;letter-spacing:1px;font-size:10px}a.clear:active{transform:scale(0.9)}::selection{background:#6868da;color:#fff}::-moz-selection{background:#6868da;color:#fff}.alertify,.alertify-show,.alertify-log{-webkit-transition:all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);-moz-transition:all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);-ms-transition:all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);-o-transition:all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);transition:all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275)}.alertify-hide{-webkit-transition:all 250ms cubic-bezier(0.6, -0.28, 0.735, 0.045);-moz-transition:all 250ms cubic-bezier(0.6, -0.28, 0.735, 0.045);-ms-transition:all 250ms cubic-bezier(0.6, -0.28, 0.735, 0.045);-o-transition:all 250ms cubic-bezier(0.6, -0.28, 0.735, 0.045);transition:all 250ms cubic-bezier(0.6, -0.28, 0.735, 0.045)}.alertify-log-hide{-webkit-transition:all 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045);-moz-transition:all 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045);-ms-transition:all 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045);-o-transition:all 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045);transition:all 500ms cubic-bezier(0.6, -0.28, 0.735, 0.045)}.alertify-cover{position:fixed;z-index:99999;top:0;right:0;bottom:0;left:0;background-color:#000;filter:alpha(opacity=0);opacity:0}.alertify-cover-hidden{display:none}.alertify{position:fixed;z-index:99999;top:50px;left:50%;width:550px;margin-left:-275px;opacity:1}.alertify-hidden{-webkit-transform:translate(0, -150px);-moz-transform:translate(0, -150px);-ms-transform:translate(0, -150px);-o-transform:translate(0, -150px);transform:translate(0, -150px);opacity:0;display:none}:root *>.alertify-hidden{display:block;visibility:hidden}.alertify-logs{position:fixed;z-index:5000;bottom:10px;right:10px;width:300px}.alertify-logs-hidden{display:none}.alertify-log{display:block;margin-top:10px;position:relative;right:-300px;opacity:0}.alertify-log-show{right:0;opacity:1}.alertify-log-hide{-webkit-transform:translate(300px, 0);-moz-transform:translate(300px, 0);-ms-transform:translate(300px, 0);-o-transform:translate(300px, 0);transform:translate(300px, 0);opacity:0}.alertify-dialog{padding:25px}.alertify-resetFocus{border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}.alertify-inner{text-align:center}.alertify-text{margin-bottom:15px;width:100%;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;font-size:100%}.alertify-button,.alertify-button:hover,.alertify-button:active,.alertify-button:visited{background:none;text-decoration:none;border:none;line-height:1.5;font-size:100%;display:inline-block;cursor:pointer;margin-left:5px}@media only screen and (max-width: 680px){.alertify,.alertify-logs{width:90%;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}.alertify{left:5%;margin:0}}.alertify,.alertify-log{font-family:"filson-soft",sans-serif}.alertify{background:#000;color:#fff;border-radius:8px;box-shadow:0 3px 3px rgba(0,0,0,0.3);-webkit-background-clip:padding;-moz-background-clip:padding;background-clip:padding-box}.alertify-text{padding:10px;border-radius:4px}.alertify-message{margin-bottom:15px}.alertify-button{border-radius:4px;font-weight:bold;padding:6px 15px;text-decoration:none;color:#fff;background:#6868da}.alertify-button:hover,.alertify-button:focus{color:#fff;background:#6868da;outline:none;transform:scale(1.1)}.alertify-button:active{position:relative}.alertify-log{background:#1F1F1F;background:rgba(0,0,0,0.9);padding:15px;border-radius:4px;color:#FFF;text-shadow:-1px -1px 0 rgba(0,0,0,0.5)}.alertify-log-error{background:#FE1A00;background:rgba(254,26,0,0.9)}.alertify-log-success{background:#5CB811;background:rgba(92,184,17,0.9)}#app{height:100vh;display:flex;align-items:center;align-content:center}#app h1{position:fixed;padding:5px;top:0;font-size:16px;text-align:left;z-index:1000;background:#fff}form{position:relative;margin:0 auto}form button{display:block;visibility:hidden;width:0px;padding:0;margin:0}form input{padding:10px;border:none;border-bottom:1px solid #fff;width:calc(100% - 20px);max-width:600px;margin:0;color:#fff;text-align:center;font-family:"filson-soft",sans-serif;font-size:20px;-webkit-style:none !important;transition:all .1s ease-in-out}::-webkit-input-placeholder{color:#ccc}::-moz-placeholder{color:#ccc}:-ms-input-placeholder{color:#ccc}:-moz-placeholder{color:#ccc}#items{margin:0 auto;padding:0;list-style:none;display:flex;flex-flow:column nowrap;max-width:620px}#items.purple li a{background:#6868da;color:#fff}#items li{margin-bottom:1px}#items li span.handle{display:flex;align-items:center;justify-content:center;position:absolute;border-right:1px solid #fff;padding:0 11px;margin-top:-3px;top:0;bottom:0;left:0}#items li.done{order:100}#items li.done span{display:none}#items li.done a{color:#a9a9a9;background:#efefef !important;text-decoration:line-through;padding-left:10px}#items li a{font-family:"filson-soft",sans-serif;font-weight:700;display:block;word-wrap:break-word;padding:10px 10px 10px 60px;text-decoration:none;color:#fff;transition:all .1s ease-in-out;text-align:left;position:relative;-webkit-hyphens:auto;-moz-hyphens:auto;hyphens:auto;width:auto}#items li a:active{transform:scale(1.025)}#items li.ui-sortable-helper a{cursor:move;cursor:-moz-grab;cursor:-webkit-grab}#items li.ui-state-highlight{height:50px;opacity:.2;max-width:620px;margin-left:auto;margin-right:auto}#items li{font-size:20px}#app h1,#app input,#app a{transition:all .1s ease-in-out}#app h1 a{text-decoration:none}#app.black form input{background:#000;outline:#000}#app.black #items li a{background:#000}#app.black li.ui-state-highlight{opacity:.1;background:#000}#app.purple form input{background:#6868da;outline:#6868da}#app.purple #items li a{background:#6868da}#app.purple li.ui-state-highlight{background:#6868da}#app.red form input{background:#F14E5C;outline:#F14E5C}#app.red #items li a{background:#F14E5C}#app.red li.ui-state-highlight{background:#F14E5C}
