--- a/assets/scss/_color-nav.scss
+++ b/assets/scss/_color-nav.scss
@@ -1,31 +1,39 @@
 nav.colors{
   position: fixed;
-  top: 5px;
-  right: 5px;
+  bottom: 5px;
+  left: 5px;
   margin: 0 auto;
   z-index: 2000;
 
-  ul li a{
-    line-height: 20px;
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    font-size: 50px;
+  ul, li{
+    margin: 0;
+  }
 
-      &.active, &:hover{
-        transform: scale(1.5);
+  ul li a{
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    border: 3px solid transparent;
+    border-radius: 8px;
+
+      &.active{
+        border: 3px solid #fff;
+      }
+
+      &:hover{
+        transform: scale(1.1);
       }
 
       &.black{
-        color: $black;
+        background: $black;
       }
 
       &.red{
-        color: $red;
+        background: $red;
       }
 
       &.purple{
-        color: $purple;
+        background: $purple;
       }
 
    }
