--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -27,7 +27,7 @@
 form{
  position: relative;
  margin: 0 auto;
-
+ width: 100%;
 }
 form button{
   display: block;
@@ -90,25 +90,24 @@ form input{
     position: absolute;
     border-right: 1px solid #fff;
     padding: 0 11px;
-    margin-top: -3px;
     top: 0;
     bottom: 0;
     left: 0;
   }
 
+  // &.done{
+  //   order: 100;
+  // }
   &.done{
-    order: 100;
-  }
-  &.done{
-    span{
-      display: none;
-    }
+    // span{
+    //   display: none;
+    // }
   }
   &.done a{
     color: #a9a9a9;
     background: #efefef !important;
     text-decoration: line-through;
-    padding-left: 10px;
+    // padding-left: 10px;
   }
 
  }
