--- a/assets/scss/_display.scss
+++ b/assets/scss/_display.scss
@@ -19,6 +19,7 @@ $break-small: 500px;
 
 body{
  text-align: center;
+ background: #000;
 }
 
 h1{
@@ -35,26 +36,6 @@ h1{
 p{
   font-family: $base-font;
 }
-
-// Clear button
- a.clear{
-  font-family: $base-font;
-  display: inline-block;
-  position: fixed;
-  right: 10px;
-  bottom: 10px;
-  padding: 10px;
-  color: $dark-gray;
-  background-color: $gray;
-  border-radius: 5px;
-  transition: all .1s ease-in-out;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-size: 10px;
-  &:active{
-    transform: scale(.9);
-  }
- }
 
 // Hide selection
 ::selection {
