--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -29,20 +29,20 @@ form input{
   font-size: 20px;
   -webkit-style: none !important;
   transition: all .1s ease-in-out;
-
+  background: red;
 }
 
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: #ccc;
+  color: #fff;
 }
-::-moz-placeholder { /* Firefox 19+ */
-  color: #ccc;
+::-moz-placeholder {
+  color: #fff;
 }
-:-ms-input-placeholder { /* IE 10+ */
-  color: #ccc;
+:-ms-input-placeholder {
+  color: #fff;
 }
-:-moz-placeholder { /* Firefox 18- */
-  color: #ccc;
+:-moz-placeholder {
+  color: #fff;
 }
 
 #items{
@@ -52,7 +52,7 @@ form input{
  display: flex;
  flex-flow: column nowrap;
  max-width: 420px;
- background: #333;
+ background: #111;
 
  position: relative;
  z-index: 200;
@@ -64,27 +64,21 @@ form input{
 
  li{
   margin-bottom: 1px;
+  font-family: $base-font;
 
-  // &.done{
-  //   order: 100;
-  // }
-  &.done{
-    // span{
-    //   display: none;
-    // }
-  }
   &.done a{
-    color: #a9a9a9;
-    background: #efefef !important;
-    text-decoration: line-through;
-    // padding-left: 10px;
+    opacity: .6;
   }
+
+  &.done a:hover{
+    opacity: .6;
+  }
+
 
  }
 
  li a{
   font-family: $base-font;
-  font-weight: 700;
   display: block;
   word-wrap: break-word;
   padding: 15px;
@@ -100,6 +94,10 @@ form input{
         hyphens: auto;
 
   width: auto;
+
+  span{
+    font-family: $base-font;
+  }
 
   &:hover{
     background: #666;
@@ -131,27 +129,24 @@ form input{
   font-size: 20px;
  }
 
-
 }
 
 // Clear
-#clear{
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: -1;
-  background: #191818;
-}
-
-#ptr{
-  position: absolute;
-  left: 0;
-  right: 0;
-  text-align: center;
- p{
-  padding: 25px;
-  color: $dark-gray;
- }
+a.clear{
+  display: inline-block;
+  margin: 15px auto;
+  padding: 10px;
+  color: #666;
+  border: 2px solid #666;
+  font-size: 12px;
+  border-radius: 4px;
+  text-transform: uppercase;
+  font-weight: bold;
+  outline: none;
+  &:hover{
+    background: #222;
+  }
+  &:active{
+    transform: scale(.9);
+  }
 }
