--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -1,6 +1,11 @@
 #app{
   position: relative;
   z-index: 0;
+
+  &.purple #items li a{
+    background: $purple;
+  }
+
 }
 
 form{
@@ -23,26 +28,18 @@ form input{
   box-sizing: border-box;
   width: 100%;
   max-width: 420px;
-  color: $white;
+  color: $purple;
+  background: transparent;
 
   font-family: $base-font;
   font-size: 20px;
   -webkit-style: none !important;
   transition: all .1s ease-in-out;
-  background: red;
+  outline: none;
 }
 
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: #fff;
-}
-::-moz-placeholder {
-  color: #fff;
-}
-:-ms-input-placeholder {
-  color: #fff;
-}
-:-moz-placeholder {
-  color: #fff;
+::-webkit-input-placeholder, ::-moz-placeholder, :-ms-input-placeholder, :-moz-placeholder {
+  color: $purple;
 }
 
 #items{
@@ -67,11 +64,11 @@ form input{
   font-family: $base-font;
 
   &.done a{
-    opacity: .6;
+    opacity: .4;
   }
 
-  &.done a:hover{
-    opacity: .6;
+  &:hover{
+    opacity: .8;
   }
 
 
@@ -84,7 +81,7 @@ form input{
   padding: 15px;
   text-decoration: none;
   color: $white;
-  transition: all .1s ease-in-out;
+  transition: all .15s ease-in-out;
   text-align: left;
 
   position: relative;
@@ -99,14 +96,8 @@ form input{
     font-family: $base-font;
   }
 
-  &:hover{
-    background: #666;
-  }
-
   &:active{
    transform: scale(.98);
-   // text-decoration: line-through;
-   // cursor: wait;
   }
 
  }
@@ -119,7 +110,7 @@ form input{
 
  li.ui-state-highlight{
   height: 50px;
-  opacity: .2;
+  opacity: .4;
   max-width: 620px;
   margin-left: auto;
   margin-right: auto;
