Kill .check transition

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -121,7 +121,7 @@ form input#create{
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 50% 50%;
-    transition: all .15s ease;
+    // transition: all .15s ease;
 
     &:active{
       background-size: 40% 40%;
