--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -7,9 +7,11 @@
 #app{
   position: relative;
   z-index: 0;
-  max-width: 800px;
   margin: 0 auto;
-  border-radius: 8px;
+
+  max-width: 420px;
+
+
 }
 
 form{
@@ -173,7 +175,8 @@ form input#create{
   font-weight: bold;
   outline: none;
   border: 0px;
-  background-color: $gray;
+  background-color: transparent;
+  border: 2px solid $dark-gray;
 
   transform: scale(1);
   transition: all .15s ease;
@@ -181,7 +184,7 @@ form input#create{
   cursor: pointer;
 
   font-size: 14px;
-  color: $black;
+  color: $dark-gray;
   border-radius: 4px;
 
   // position: fixed;
