--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -43,6 +43,14 @@ form input#create{
   -webkit-style: none !important;
   transition: all .1s ease-in-out;
   outline: none;
+
+  margin: 0;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 300;
+
 }
 
 ::-webkit-input-placeholder, ::-moz-placeholder, :-ms-input-placeholder, :-moz-placeholder {
@@ -59,7 +67,6 @@ form input#create{
 
  position: relative;
  z-index: 200;
-
 
  li{
   margin-bottom: 1px;
@@ -91,7 +98,7 @@ form input#create{
   word-wrap: break-word;
   padding: 15px;
   text-decoration: none;
-  color: $purple;
+  color: $white;
   transition: all .15s ease-in-out;
   text-align: left;
 
@@ -102,14 +109,13 @@ form input#create{
         hyphens: auto;
 
   width: auto;
-
-  -webkit-user-modify:read-write;
+  -webkit-user-modify: read-write;
 
   div.edit{
     font-family: $base-font;
     padding-right: 50px;
     display: block;
-    outline-color: $purple;
+    outline-color: $white;
   }
 
   .check{
