UI Cleanup! So fresh!

--- a/assets/scss/_display.scss
+++ b/assets/scss/_display.scss
@@ -55,3 +55,19 @@ p, li, a{
   background: $purple;
   color: $white;
 }
+
+@-webkit-keyframes clearbutton {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@-moz-keyframes clearbutton {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@keyframes clearbutton {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
