--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -1,17 +1,8 @@
 *{outline: none;}
-// body{
-//   background: url(../images/bg.png) no-repeat center center;
-//   background-size: cover;
-//   background-attachment: fixed;
-// }
 #app{
   position: relative;
   z-index: 0;
   margin: 0 auto;
-
-  max-width: 420px;
-
-
 }
 
 form{
@@ -19,6 +10,7 @@ form{
  margin: 0 auto;
  width: 100%;
 }
+
 form button{
   display: block;
   visibility: hidden;
@@ -49,7 +41,7 @@ form input#create{
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 300;
+  z-index: 200;
 
 }
 
@@ -63,29 +55,22 @@ form input#create{
  list-style: none;
  display: flex;
  flex-flow: column nowrap;
- background: #111;
+ // background: #111;
 
  position: relative;
- z-index: 200;
+ z-index: 100;
 
  li{
   margin-bottom: 1px;
   font-family: $base-font;
 
   &.done a{
-    color: #5d5d5d;
     text-decoration: line-through;
-    opacity: .4;
   }
 
   &.done a .check{
     background-image: url(../images/icon-circle-check.svg);
   }
-
-  &:hover{
-    opacity: .8;
-  }
-
 
  }
 
@@ -171,39 +156,40 @@ form input#create{
 // Clear
 .clear{
   display: block;
-  margin: 15px auto;
-  padding: 10px;
+  margin: 0 auto;
+  padding: 15px 0;
   line-height: 20px;
-  text-transform: uppercase;
   font-weight: bold;
   outline: none;
-  border: 0px;
-  background-color: transparent;
-  border: 2px solid $dark-gray;
+  border: none;
+  width: 100%;
+
+  font-family: $base-font;
+  position: relative;
+  z-index: 300;
+
+  background: linear-gradient(270deg, #6868da, #f14e5c);
+  background-size: 400% 400%;
+
+  -webkit-animation: clearbutton 30s ease infinite;
+  -moz-animation: clearbutton 30s ease infinite;
+  animation: clearbutton 30s ease infinite;
 
   transform: scale(1);
   transition: all .15s ease;
 
   cursor: pointer;
-
-  font-size: 14px;
-  color: $dark-gray;
-  border-radius: 4px;
-
-  // position: fixed;
-  // bottom: 0;
-  // right: 15px;
-
+  font-size: 20px;
+  color: $white;
 
   &.hide{
     transform: scale(0);
-  }
+    padding: 0;
+    line-height: 0;
 
-  &:hover{
-    transform: scale(1.05);
   }
 
   &:active{
-    transform: scale(.995);
+   transform: scale(1.1);
   }
 }
