Lots and lots of tightening

--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -1,3 +1,14 @@
+$white: #fff;
+$black: #000;
+$light-gray: #efefef;
+$gray: #ddd;
+$dark-gray: #333;
+
+$purple: #6868da;
+$red: #F14E5C;
+$yellow: #e8d354;
+
+
 #app{
 
   h1, input, a{
