--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -2,7 +2,10 @@
 @import "reset";
 
 // Look and Feel
+@import "colors";
+@import "type";
 @import "display";
 
 // App
 @import "main";
+@import "items";
