--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -1,4 +1,8 @@
 *{outline: none;}
+body{
+  padding-bottom: 55px;
+}
+
 #app{
   position: relative;
   z-index: 0;
@@ -29,8 +33,7 @@ form input#create{
   color: $white;
   background: #333;
 
-  font-family: $base-font;
-  font-size: 20px;
+  font-size: 1rem;
   -webkit-appearance: none !important;
   -webkit-style: none !important;
   transition: all .1s ease-in-out;
@@ -49,123 +52,19 @@ form input#create{
   color: $white;
 }
 
-#items{
- margin: 0 auto;
- padding: 0;
- list-style: none;
- display: flex;
- flex-flow: column nowrap;
- // background: #111;
-
- position: relative;
- z-index: 100;
-
- li{
-  margin-bottom: 1px;
-  font-family: $base-font;
-
-  &.done a{
-    text-decoration: line-through;
-  }
-
-  &.done a .check{
-    background-image: url(../images/icon-circle-check.svg);
-  }
-
- }
-
- li a{
-
-  background-color: #222;
-
-  font-family: $base-font;
-  display: block;
-  word-wrap: break-word;
-  padding: 15px;
-  text-decoration: none;
-  color: $white;
-  transition: all .15s ease-in-out;
-  text-align: left;
-
-  position: relative;
-
-  -webkit-hyphens: auto;
-   -moz-hyphens: auto;
-        hyphens: auto;
-
-  width: auto;
-  -webkit-user-modify: read-write;
-
-  div.edit{
-    font-family: $base-font;
-    padding-right: 50px;
-    display: block;
-    outline-color: $white;
-  }
-
-  .check{
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 42px;
-    z-index: 1000;
-    display: inline-block;
-    visibility: visible;
-    background-color: transparent;
-    border: none;
-    background-image: url(../images/icon-circle.svg);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 50% 50%;
-    opacity: .2;
-    // transition: all .15s ease;
-
-    &:active{
-      background-size: 48% 48%;
-    }
-
-    &:hover{
-      opacity: 1;
-    }
-
-  }
-
- }
-
- li.ui-sortable-helper a{
-   cursor: grabbing;
-   cursor: -moz-grabbing;
-   cursor: -webkit-grabbing;
- }
-
- li.ui-state-highlight{
-  height: 50px;
-  opacity: .4;
-  max-width: 620px;
-  margin-left: auto;
-  margin-right: auto;
- }
-
- li{
-  font-size: 20px;
- }
-
-}
 
 // Clear
 .clear{
   display: block;
   margin: 0 auto;
   padding: 15px 0;
-  line-height: 20px;
   font-weight: bold;
   outline: none;
   border: none;
   width: 100%;
+  text-transform: uppercase;
 
   font-family: $base-font;
-  position: relative;
   z-index: 300;
 
   background: linear-gradient(270deg, #6868da, #f14e5c);
@@ -179,7 +78,6 @@ form input#create{
   transition: all .15s ease;
 
   cursor: pointer;
-  font-size: 20px;
   color: $white;
 
   &.hide{
