--- a/assets/scss/_clear.scss
+++ b/assets/scss/_clear.scss
@@ -1,41 +1,3 @@
-body{
-  padding-top: 60px;
-}
-
-header{
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  height: 60px;
-  background: $dark-gray;
-  z-index: 500;
-  text-align: center;
-  transition: all .2s ease;
-
-  a.logo{
-    display: block;
-    margin-top: 20px;
-    color: $white;
-  }
-
-  &.fixed{
-    height: 40px;
-
-    a.logo{
-      display: block;
-      margin-top: 8px;
-    }
-
-    .clear{
-      top: 6px;
-    }
-
-  }
-
-
-}
-
 // Clear
 .clear{
   display: block;
@@ -43,13 +5,15 @@ header{
   font-weight: bold;
   outline: none;
   border: none;
-  width: 40px;
-  position: absolute;
+  width: 50px;
+  height: 50px;
+  line-height: 57px;
+  padding: 0;
+  position: fixed;
 
   right: 0;
-  top: 10px;
   bottom: 0px;
-  font-size: .9rem;
+  font-size: 1.5rem;
   text-transform: uppercase;
 
   font-family: $base-font;
@@ -72,8 +36,6 @@ header{
 
   &.hide{
     transform: scale(0);
-    padding: 0;
-    line-height: 0;
   }
 
   &:active{
